2009-05-29  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/massive_edit_modules.php: Renamed ff_event field
	to min_ff_event to match tagente_modulo field name. Better code for
	process_manage_edit(). Fixes #2785011.

	* include/functions_modules.php: Fixed an error on
	update_agente_module() when no name was given, also added extra
	check for empty values.

2009-05-29  Esteban Sanchez  <estebans@artica.es>

	* include/functions_menu.php: Added menu_icon class.

	* include/styles/menu.css: Split background style for menu icons.
	Recovered menu colors.

	* include/styles/pandora.css: Added body.pure element.

	* include/styles/pandora_blackmetal.css,
	include/styles/pandora_black.css: Improve to reuse pandora.css

	* include/functions_ui.php: Use pure class on body element
	on process_page_body(). Better comment when creating the css array on
	process_page_head().

2009-05-28  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/map_builder.php: Replaced exit with return. Use
	jquery.pandora_controls extensions to manage agent dropdown.
	Fixes #2784397

	* include/javascript/jquery.pandora.controls.js: Exclude delete pending
	modules on pandoraSelectAgentModule.

	* include/javascript/pandora.js: Removed php code on a javascript file.

2009-05-28  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Return -1 on get_agent_status() on case
	the agent last contact has exceed the agent interval.

	* include/functions_visual_map.php: Call get_agent_status() when
	an element is to monitor a whole agent. Fixes #2761712

2009-05-28  Esteban Sanchez  <estebans@artica.es>

	* install.php: Use server address if the db host is not localhost.
	Fixes #2796790.

	* include/functions_agents.php: Fixed an array cast on
	get_agent_alerts_compound().

	* include/functions_events.php: Critical and warning colors where
	swapped on print_events_table().

	* include/functions_reporting.php: Fixed alerts count on